[project]
name = "kovnet-cli"
version = "1.0.0"
description = "Command-line interface for the KovNet childcare platform (kinderopvang)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Anne Schuth" }]
keywords = ["kovnet", "kinderopvang", "childcare", "cli", "parent-app"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
cli = [
    "rich>=13.0",
    "python-dotenv>=1.0",
    "click>=8.1",
]
dev = ["kovnet-cli[cli]", "pytest>=8.0", "pre-commit>=4.0", "ruff>=0.9.0", "ty>=0.0.1a0"]

[project.scripts]
kovnet = "kovnet.cli:main"

[project.urls]
Homepage = "https://github.com/anneschuth/kovnet-cli"
Repository = "https://github.com/anneschuth/kovnet-cli"
Issues = "https://github.com/anneschuth/kovnet-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kovnet"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["kovnet"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/kovnet/cli.py:__version__"]
branch = "main"
build_command = "python -m build"
commit_message = "chore(release): {version}"
tag_format = "v{version}"
major_on_zero = false

[tool.semantic_release.changelog]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["src"]
